--- a/public/ch2.hello-react.html
+++ b/public/ch2.hello-react.html
@@ -8,6 +8,9 @@
 
 <div id="root"></div>
 
-<script>
-ReactDOM.render()
+<script type="text/babel">
+ReactDOM.render(
+   <h1>hello, world!</h1>,
+    document.getElementById('root')
+)
 </script>
