--- a/public/ch2.jsx-escape.html
+++ b/public/ch2.jsx-escape.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html><head>
     <meta charset="utf-8">
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
-    </head>
-    <body>
-<div id="root"></div>
+  </head><body>
+     <div id="root"></div>
   <script type="text/babel">
-    const item = "SDカード"
-    const value = 1200
-    const msg = <h1>{item} - {value}円</h1>
-    const elm = document.getElementById("root")
-    ReactDOM.render(msg, elm)
+    const value = "<<< 豚に真珠、猫に小判 >>>"
+    const elem = <h2>{value}</h2>
+    const root = document.getElementById('root')
+    ReactDOM.render(elem, root)
   </script>
 </body></html>
